Added tests and some fixes
Added tests and some fixes
