# api/controllers/passageiroController.js
@@ -6,3 +6,8 @@ const passageiroService = new PassageiroService();
 module.exports.addPassageiro = (req, res) => {
     passageiroService.addPassageiro(req, res);
 }
+
+
+module.exports.delPassageiro = (req, res) => {
+    passageiroService.delPassageiro(req, res);
+}
