# domain/business/passageiroBO.js
@@ -4,17 +4,17 @@ const passageiroRepo = new PassageiroRepo();
 
 /** Adiciona Passageiro. */
 exports.addPassageiro = async function(body) {
+
+    if(!(body.name && body.email && body.cardId && body.password)){
+        var err = new Error('Campos insuficientes');
+        throw err;
+    }
     
     let _pass = await passageiroRepo.getPassageiroByCard(body.cardId);
     let _pass2 = await passageiroRepo.getPassageiroByEmail(body.email);
 
     if(_pass || _pass2){
         var err = new Error('Usuário já cadastrado para esse card ou e-mail');
-        throw err;
-    }
-
-    if(!(body.name && body.email && body.cardId && body.password)){
-        var err = new Error('Campos insuficientes');
         throw err;
     }
 
@@ -26,6 +26,25 @@ exports.addPassageiro = async function(body) {
     validObj.senha = body.password;
 
     let result = await passageiroRepo.adicionar(validObj);
+    return result;
+    
+}
+
+
+/** Deleta Passageiro. */
+exports.delPassageiro = async function(cardId) {    
+
+    if(!cardId){
+        var err = new Error('Campos insuficientes');
+        throw err;
+    }
+    let _pass = await passageiroRepo.getPassageiroByCard(cardId);    
+
+    if(!_pass){
+        var err = new Error('Usuário não encontrado');
+        throw err;
+    }
+    let result = await passageiroRepo.deletarByCardId(cardId);
     return result;
     
 }
